tests/baselines/reference/parserErrorRecovery_ArgumentList7.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ArgumentList7.ts (4 errors) ====
    Foo(a,,
          ~
!!! parserErrorRecovery_ArgumentList7.ts(1,7): error TS1109: Expression expected.
           
!!! parserErrorRecovery_ArgumentList7.ts(1,8): error TS1005: ')' expected.
    ~~~
!!! parserErrorRecovery_ArgumentList7.ts(1,1): error TS2095: Cannot find name 'Foo'.
        ~
!!! parserErrorRecovery_ArgumentList7.ts(1,5): error TS2095: Cannot find name 'a'.